Toggle the version, and turn on the production ClusterIssuer Update the target namespace

--- a/charts/peak/templates/certificate.yaml
+++ b/charts/peak/templates/certificate.yaml
@@ -17,7 +17,7 @@ spec:
   dnsNames:
     - {{ . }}
   issuerRef:
-    name: letsencrypt-staging
+    name: letsencrypt-production
     kind: ClusterIssuer
 ---
   {{ end }}
