--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "mini-css-extract-plugin": "^0.6.0",
     "node-sass": "^4.11.0",
     "opn": "^5.1.0",
-    "prismjs": "^1.17.1",
     "sass-loader": "^7.0.0",
     "stylelint": "^9.10.1",
     "stylelint-config-recommended-scss": "^3.2.0",
@@ -40,6 +39,7 @@
     "vue-form": "^4.4.0",
     "vue-loader": "^15.0.0",
     "vue-meta": "^1.0.4",
+    "vue-prismjs": "^1.2.0",
     "vue-router": "^3.0.1",
     "vue-style-loader": "^4.0.0",
     "vue-template-compiler": "^2.6.9",
