--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "ci": "yarn run lint && yarn run test:coverage"
   },
   "dependencies": {
-    "@wealthbar/peak-style": "^1.2.10",
+    "@wealthbar/peak-style": "^1.2.11",
     "compression-webpack-plugin": "^2.0.0",
     "connect-history-api-fallback": "^1.3.0",
     "eslint": "^5.12.1",
@@ -29,6 +29,7 @@
     "mini-css-extract-plugin": "^0.6.0",
     "node-sass": "^4.11.0",
     "opn": "^5.1.0",
+    "prismjs": "^1.17.1",
     "sass-loader": "^7.0.0",
     "stylelint": "^9.10.1",
     "stylelint-config-recommended-scss": "^3.2.0",
