--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,8 +44,9 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
+      - uses: docker://cerebralchaos/do-k8s-helper:latest
+
       - name: Deploy to Kubernetes cluster
-        uses: docker://cerebralchaos/do-k8s-helper:latest
         env:
           CLUSTER_NAME: ${{ secrets.cluster_name }}
           DIGITALOCEAN_ACCESS_TOKEN: ${{ secrets.digitalocean_access_token }}
