Reorganize steps of the GH actions.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,7 +44,14 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: docker://cerebralchaos/do-k8s-helper:latest
+      - name: Get DO Cluster info
+        uses: docker://cerebralchaos/do-k8s-helper:latest
+        run: |
+          doctl kubernetes cluster kubeconfig save $CLUSTER_NAME --access-token $DIGITALOCEAN_ACCESS_TOKEN > $GITHUB_WORKSPACE/.kubeconfig
+
+      - name: Set K8s Config env
+        run: |
+          export KUBECONFIG=$GITHUB_WORKSPACE/.kubeconfig
 
       - name: Deploy to Kubernetes cluster
         env:
@@ -53,7 +60,6 @@ jobs:
           CHART_REPO_USER: ${{ secrets.chart_repo_user}}
           CHART_REPO_TOKEN: ${{ secrets.chart_repo_token}}
         run: |
-          doctl kubernetes cluster kubeconfig save $CLUSTER_NAME --access-token $DIGITALOCEAN_ACCESS_TOKEN
           helm repo add --username $CHART_REPO_USER --password $CHART_REPO_TOKEN chartroom 'https://raw.githubusercontent.com/WealthBar/chartroom/master/'
           helm repo update
           helm upgrade --install peak chartroom/peak --namespace peak-design --set image.tag=${GITHUB_SHA}
