--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,7 +50,7 @@ jobs:
           DIGITALOCEAN_ACCESS_TOKEN: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
           CLUSTER_NAME: ${{ secrets.cluster_name }}
         with:
-          args: kubernetes cluster kubeconfig show $CLUSTER_NAME > $GITHUB_WORKSPACE/.kubeconfig
+          args: kubernetes cluster kubeconfig show {{ secrets.cluster_name}} > $GITHUB_WORKSPACE/.kubeconfig
 
       - name: Set K8s Config env
         run: |
