--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,10 +47,10 @@ jobs:
       - name: Save DigitalOcean kubeconfig
         uses: digitalocean/action-doctl@master
         env:
-          DIGITALOCEAN_ACCESS_TOKEN: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
+          DIGITALOCEAN_ACCESS_TOKEN: ${{ secrets.digitalocean_access_token }}
           CLUSTER_NAME: ${{ secrets.cluster_name }}
         with:
-          args: kubernetes cluster kubeconfig show {{ secrets.cluster_name}} > $GITHUB_WORKSPACE/.kubeconfig
+          args: kubernetes cluster kubeconfig show $CLUSTER_NAME > $GITHUB_WORKSPACE/.kubeconfig
 
       - name: Set K8s Config env
         run: |
