--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,7 +50,8 @@ jobs:
           DIGITALOCEAN_ACCESS_TOKEN: ${{ secrets.digitalocean_access_token }}
           CLUSTER_NAME: ${{ secrets.cluster_name }}
         with:
-          args: kubernetes cluster kubeconfig show $CLUSTER_NAME > $GITHUB_WORKSPACE/.kubeconfig
+          # args: kubernetes cluster kubeconfig show $CLUSTER_NAME > $GITHUB_WORKSPACE/.kubeconfig
+          args: kubernetes cluster list
 
       - name: Set K8s Config env
         run: |
