--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,8 +49,11 @@ jobs:
           DIGITALOCEAN_ACCESS_TOKEN: ${{ secrets.digitalocean_access_token }}
           CLUSTER_NAME: ${{ secrets.cluster_name }}
         run: |
-          sudo snap install doctl
+          snap install doctl
+          echo $CLUSTER_NAME
+          echo $GITHUB_WORKSPACE
           doctl kubernetes cluster kubeconfig show $CLUSTER_NAME --access-token $DIGITALOCEAN_ACCESS_TOKEN > $GITHUB_WORKSPACE/.kubeconfig
+          cat $GITHUB_WORKSPACE/.kubeconfig
 
       - name: Deploy to Kubernetes cluster
         env:
