Switch back to action after confirming the problem with the token

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,14 +44,13 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Configure/Deploy/Verify Kubernetes
+      - name: Save DigitalOcean kubeconfig
+        uses: digitalocean/action-doctl@master
         env:
+          DIGITALOCEAN_ACCESS_TOKEN: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
           CLUSTER_NAME: ${{ secrets.cluster_name }}
-          DIGITALOCEAN_ACCESS_TOKEN: ${{ secrets.digitalocean_access_token }}
-        run: |
-          curl -L https://github.com/digitalocean/doctl/releases/download/v1.30.0/doctl-1.30.0-linux-amd64.tar.gz | tar xz
-          ./doctl auth init -t $DIGITALOCEAN_ACCESS_TOKEN
-          ./doctl kubernetes cluster kubeconfig show $CLUSTER_NAME > $GITHUB_WORKSPACE/.kubeconfig
+        with:
+          args: kubernetes cluster kubeconfig show $CLUSTER_NAME > $GITHUB_WORKSPACE/.kubeconfig
 
       - name: Deploy to Kubernetes cluster
         env:
