--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -84,7 +84,7 @@ jobs:
           CHART_REPO_TOKEN: ${{ secrets.chart_repo_token}}
         run: |
           curl -L https://get.helm.sh/helm-v3.0.3-linux-amd64.tar.gz | tar xz
-          mv ./helm /usr/bin/helm3 && chmod a+x /usr/bin/helm3
+          mv ./linux-amd64/helm /usr/bin/helm3 && chmod a+x /usr/bin/helm3
           helm3 repo add --username $CHART_REPO_USER --password $CHART_REPO_TOKEN chartroom 'https://raw.githubusercontent.com/WealthBar/chartroom/master/'
           helm3 repo update
           helm3 upgrade --install peak chartroom/peak --kubeconfig=$GITHUB_WORKSPACE/.kubeconfig --namespace peak-design --set image.tag=${GITHUB_SHA}
