--- a/charts/peak/Chart.yaml
+++ b/charts/peak/Chart.yaml
@@ -2,7 +2,14 @@ apiVersion: v2
 name: peak
 version: 1.0.0
 appVersion: 1.16.0
-description: Website for the Peak Design System
+description: WealthBar's Design System - Style Guide and Component Documentation
+sources:
+  - https://www.github.com/wealthbar/peak-design-system
+home: https://peak.wealth.bar
 type: application
-icon: https://www.ppivalet.ca/brand/ppi/favicon-180.png
 deprecated: false
+
+dependencies:
+  - name: wealthbar-ci-pull-secret
+    version: "1.0.0"
+    repository: "https://raw.githubusercontent.com/WealthBar/chartroom/master"
