--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "vue-form": "^4.4.0",
     "vue-loader": "^15.0.0",
     "vue-meta": "^1.0.4",
+    "vue-prism": "^1.0.5",
     "vue-router": "^3.0.1",
     "vue-style-loader": "^4.0.0",
     "vue-template-compiler": "^2.6.9",
