--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mini-css-extract-plugin": "^0.6.0",
     "node-sass": "^4.11.0",
     "opn": "^5.1.0",
+    "prismjs": "^1.20.0",
     "sass-loader": "^7.0.0",
     "stylelint": "^9.10.1",
     "stylelint-config-recommended-scss": "^3.2.0",
@@ -37,7 +38,6 @@
     "vue-form": "^4.4.0",
     "vue-loader": "^15.0.0",
     "vue-meta": "^1.0.4",
-    "vue-prism": "^1.0.5",
     "vue-router": "^3.0.1",
     "vue-style-loader": "^4.0.0",
     "vue-template-compiler": "^2.6.9",
