--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
     "test:watch": "NODE_ENV=test wprun -w -c build/webpack.base.conf.js -r ./util/test_helper.js 'src/**/*.test.js' | tap-spec"
   },
   "dependencies": {
-    "@wealthbar/peak-style": "^1.2.11",
+    "@wealthbar/peak-style": "1.6.0",
     "compression-webpack-plugin": "^2.0.0",
     "connect-history-api-fallback": "^1.3.0",
     "express": "^4.15.3",
     "file-loader": "^3.0.1",
     "mini-css-extract-plugin": "^0.6.0",
-    "node-sass": "^4.11.0",
+    "node-sass": "^4.14.1",
     "opn": "^5.1.0",
     "prismjs": "^1.20.0",
     "sass-loader": "^7.0.0",
