--- a/charts/peak/templates/deployment.yaml
+++ b/charts/peak/templates/deployment.yaml
@@ -22,6 +22,9 @@ spec:
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
 
+          resources:
+            {{- toYaml .Values.resources | nindent 12 }}
+
           ports:
             - containerPort: {{ .Values.service.targetPort }}
 
