--- a/charts/peak/values.yaml
+++ b/charts/peak/values.yaml
@@ -4,7 +4,7 @@ replicaCount: 1
 
 image:
   repository: docker.pkg.github.com/wealthbar/peak-design-system/peak-design-system
-  tag: master
+  tag: main
   pullPolicy: Always
 
 service:
