--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -80,7 +80,7 @@ jobs:
         run: |
           curl -L https://get.helm.sh/helm-v3.0.3-linux-amd64.tar.gz | tar xz
           chmod a+x ./linux-amd64/helm
-          ./linux-amd64/helm upgrade --install peak $GITHUB_WORKSPACE/charts/peak --kubeconfig=$GITHUB_WORKSPACE/.kubeconfig --namespace peak-design --set image.tag=${GITHUB_SHA}
+          ./linux-amd64/helm upgrade --install peak $GITHUB_WORKSPACE/charts/peak --kubeconfig=$GITHUB_WORKSPACE/.kubeconfig --namespace peak-design --atomic --timeout 5m --set image.tag=${GITHUB_SHA}
 
       - name: Update github with deployment success status
         if: success()
