--- a/charts/peak/templates/deployment.yaml
+++ b/charts/peak/templates/deployment.yaml
@@ -51,3 +51,24 @@ spec:
             initialDelaySeconds: 60
             timeoutSeconds: 5
             failureThreshold: 3
+
+          volumeMounts:
+            - name: varlog
+              mountPath: "/var/log/node"
+
+        - name: logger
+          image: docker.pkg.github.com/nk-wb/remote_syslog/remote_syslog:0.1
+          imagePullPolicy: Always
+
+          volumeMounts:
+            - name: varlog
+              mountPath: "/var/log/node"
+            - name: config-volume
+              mountPath: "/etc/rs2"
+
+      volumes:
+        - name: varlog
+          emptyDir: {}
+        - name: config-volume
+          secret:
+            secretName: {{ .Release.Name }}-rs2-config
