--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "build": "node build/build.js",
     "lint": "eslint 'src/**/*.{js,vue}'",
+    "lint:fix": "eslint 'src/**/*.{js,vue}' --fix",
     "ci": "yarn run lint && yarn run test:coverage",
     "coverage": "yarn run test:coverage",
     "dev": "DEMO_MODE=true node build/dev-server.js",
@@ -26,10 +27,10 @@
     "express": "^4.15.3",
     "file-loader": "^3.0.1",
     "mini-css-extract-plugin": "^0.6.0",
-    "node-sass": "^4.14.1",
     "opn": "^5.1.0",
     "prismjs": "^1.20.0",
-    "sass-loader": "^7.0.0",
+    "sass": "^1.29.0",
+    "sass-loader": "^7.3.1",
     "stylelint": "^9.10.1",
     "stylelint-config-recommended-scss": "^3.2.0",
     "stylelint-scss": "^3.5.1",
@@ -48,16 +49,14 @@
     "webpack-merge": "^4.0.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-eslint": "~4.4.0",
     "@vue/component-compiler": "^3.6.0",
-    "@vue/eslint-config-airbnb": "^5.0.2",
     "@vue/test-utils": "^1.0.0-beta.28",
     "animate.css": "^3.5.2",
     "autoprefixer": "^7.1.2",
     "avoriaz": "^2.4.3",
     "axios": "^0.16.2",
-    "babel-core": "^6.25.0",
-    "babel-eslint": "^7.2.3",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^7.1.1",
     "babel-plugin-istanbul": "^4.1.4",
     "babel-plugin-transform-runtime": "^6.23.0",
@@ -67,14 +66,15 @@
     "chalk": "^2.3.2",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.0",
-    "eslint": "^6.7.2",
-    "eslint-friendly-formatter": "^4.0.0",
-    "eslint-import-resolver-node": "^0.3.1",
-    "eslint-import-resolver-webpack": "^0.11.0",
-    "eslint-loader": "^2.0.0",
-    "eslint-plugin-html": "^5.0.0",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-vue": "^6.2.2",
+    "eslint": "^7.13.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-friendly-formatter": "^4.0.1",
+    "eslint-import-resolver-node": "^0.3.4",
+    "eslint-import-resolver-webpack": "^0.13.0",
+    "eslint-plugin-html": "^6.1.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-vue": "^7.1.0",
+    "eslint-webpack-plugin": "^2.4.0",
     "eventsource-polyfill": "^0.9.6",
     "extract-text-webpack-plugin": "^2.0.0",
     "friendly-errors-webpack-plugin": "^1.1.3",
