--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "build": "node build/build.js",
     "lint": "eslint 'src/**/*.{js,vue}'",
+    "lint:fix": "eslint 'src/**/*.{js,vue}' --fix",
     "ci": "yarn run lint && yarn run test:coverage",
     "coverage": "yarn run test:coverage",
     "dev": "DEMO_MODE=true node build/dev-server.js",
@@ -14,91 +15,81 @@
     "prod": "API_URL=https://localhost:3000/api node build/prod-server.js",
     "start": "node build/prod-server.js",
     "start:logged": "node build/prod-server.js 1> /var/log/node/app.log 2> /var/log/node/err.log",
-    "test": "NODE_ENV=test wprun -c build/webpack.base.conf.js -r ./util/test_helper.js 'src/**/*.test.js' | tap-spec",
     "test:coverage": "nyc -r text-summary -r html yarn test",
-    "test:debug": "NODE_ENV=test node inspect -c build/webpack.base.conf.js -r ./util/test_helper.js 'src/**/*.test.js' | tap-spec",
-    "test:watch": "NODE_ENV=test wprun -w -c build/webpack.base.conf.js -r ./util/test_helper.js 'src/**/*.test.js' | tap-spec"
+    "test:debug": "NODE_ENV=test node inspect -c build/webpack.base.conf.js -r ./util/test_helper.js 'src/**/*.test.js' | tap-spec"
   },
   "dependencies": {
-    "@wealthbar/peak-style": "^2.5.4",
-    "compression-webpack-plugin": "^2.0.0",
-    "connect-history-api-fallback": "^1.3.0",
-    "express": "^4.15.3",
-    "file-loader": "^3.0.1",
-    "mini-css-extract-plugin": "^0.6.0",
-    "node-sass": "^4.14.1",
-    "opn": "^5.1.0",
-    "prismjs": "^1.20.0",
-    "sass-loader": "^7.0.0",
-    "stylelint": "^9.10.1",
-    "stylelint-config-recommended-scss": "^3.2.0",
-    "stylelint-scss": "^3.5.1",
-    "stylelint-webpack-plugin": "^0.10.5",
-    "terser-webpack-plugin": "^1.2.1",
-    "vue": "^2.6",
-    "vue-form": "^4.4.0",
-    "vue-loader": "^15.0.0",
-    "vue-meta": "^1.0.4",
-    "vue-router": "^3.0.1",
-    "vue-style-loader": "^4.0.0",
-    "vue-template-compiler": "^2.6.9",
-    "vue-touch": "^2.0.0-beta.4",
-    "vuex": "^3.0.0",
-    "webpack": "^4.0.0",
-    "webpack-merge": "^4.0.0"
+    "@babel/polyfill": "^7.12.1",
+    "@babel/runtime": "^7.12.5",
+    "@wealthbar/peak-style": "^3.0.0",
+    "compression-webpack-plugin": "^6.1.1",
+    "connect-history-api-fallback": "^1.6.0",
+    "express": "^4.17.1",
+    "fibers": "^5.0.0",
+    "file-loader": "^6.2.0",
+    "mini-css-extract-plugin": "^1.3.1",
+    "prismjs": "^1.22.0",
+    "sass": "^1.29.0",
+    "sass-loader": "^10.1.0",
+    "stylelint": "^13.8.0",
+    "stylelint-config-recommended-scss": "^4.2.0",
+    "stylelint-scss": "^3.18.0",
+    "stylelint-webpack-plugin": "^2.1.1",
+    "vue": "^2.6.12",
+    "vue-form": "^4.10.3",
+    "vue-loader": "^15.9.5",
+    "vue-meta": "^2.4.0",
+    "vue-router": "^3.4.9",
+    "vue-style-loader": "^4.1.2",
+    "vue-template-compiler": "^2.6.12",
+    "vuex": "^3.5.1",
+    "webpack": "^5.6.0",
+    "webpack-merge": "^5.4.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-eslint": "~4.4.0",
+    "@babel/core": "^7.12.9",
+    "@babel/plugin-transform-runtime": "^7.12.1",
+    "@babel/preset-env": "^7.12.7",
     "@vue/component-compiler": "^3.6.0",
-    "@vue/eslint-config-airbnb": "^5.0.2",
-    "@vue/test-utils": "^1.0.0-beta.28",
+    "@vue/test-utils": "^1.1.1",
     "animate.css": "^3.5.2",
     "autoprefixer": "^7.1.2",
     "avoriaz": "^2.4.3",
     "axios": "^0.16.2",
-    "babel-core": "^6.25.0",
-    "babel-eslint": "^7.2.3",
-    "babel-loader": "^7.1.1",
-    "babel-plugin-istanbul": "^4.1.4",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-stage-2": "^6.24.1",
-    "browser-env": "^3.1.0",
-    "chalk": "^2.3.2",
-    "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.28.0",
-    "eslint": "^6.7.2",
-    "eslint-friendly-formatter": "^4.0.0",
-    "eslint-import-resolver-node": "^0.3.1",
-    "eslint-import-resolver-webpack": "^0.11.0",
-    "eslint-loader": "^2.0.0",
-    "eslint-plugin-html": "^5.0.0",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-vue": "^6.2.2",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.2.1",
+    "babel-plugin-istanbul": "^6.0.0",
+    "browser-env": "^3.3.0",
+    "chalk": "^4.1.0",
+    "copy-webpack-plugin": "^6.3.2",
+    "css-loader": "^5.0.1",
+    "eslint": "^7.14.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-friendly-formatter": "^4.0.1",
+    "eslint-import-resolver-node": "^0.3.4",
+    "eslint-import-resolver-webpack": "^0.13.0",
+    "eslint-plugin-html": "^6.1.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-vue": "^7.1.0",
+    "eslint-webpack-plugin": "^2.4.0",
     "eventsource-polyfill": "^0.9.6",
-    "extract-text-webpack-plugin": "^2.0.0",
-    "friendly-errors-webpack-plugin": "^1.1.3",
-    "html-webpack-plugin": "^3.0.0",
-    "http-proxy-middleware": "^0.17.3",
-    "make-dir": "^1.0.0",
+    "html-webpack-plugin": "^5.0.0-alpha.14",
+    "http-proxy-middleware": "^1.0.6",
     "nyc": "^11.0.3",
-    "opn": "^5.1.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.0",
-    "ora": "^1.2.0",
-    "postcss": "^7.0.14",
-    "postcss-loader": "^3.0.0",
-    "rimraf": "^2.6.0",
-    "semver": "^5.3.0",
-    "shelljs": "^0.7.6",
+    "open": "^7.3.0",
+    "ora": "^5.1.0",
+    "postcss": "^8.1.10",
+    "postcss-loader": "^4.1.0",
+    "rimraf": "^3.0.2",
     "sinon": "^2.3.7",
     "tap-spec": "^4.1.1",
     "tape": "^4.7.0",
-    "url-loader": "^0.5.8",
-    "webpack-bundle-analyzer": "^3.0.0",
-    "webpack-dev-middleware": "^3.0.0",
-    "webpack-hot-middleware": "^2.0.0",
-    "webpack-node-externals": "^1.0.0",
-    "wprun": "^1.0.2"
+    "url-loader": "^4.1.1",
+    "webpack-bundle-analyzer": "^4.1.0",
+    "webpack-cli": "^4.2.0",
+    "webpack-dev-middleware": "^4.0.2",
+    "webpack-hot-middleware": "^2.25.0",
+    "webpack-node-externals": "^2.5.2"
   },
   "browserslist": [
     "> 1%",
@@ -106,7 +97,7 @@
     "not ie <= 10"
   ],
   "engines": {
-    "node": ">= 11.10.1",
+    "node": ">= 12.18.3",
     "yarn": ">= 1.0.0"
   },
   "nyc": {
