--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "test:watch": "NODE_ENV=test wprun -w -c build/webpack.base.conf.js -r ./util/test_helper.js 'src/**/*.test.js' | tap-spec"
   },
   "dependencies": {
+    "@vue/compiler-sfc": "^3.0.5",
     "@wealthbar/peak-style": "^3.1.1",
     "compression-webpack-plugin": "^2.0.0",
     "connect-history-api-fallback": "^1.3.0",
+    "element-plus": "^1.0.1-beta.27",
     "express": "^4.15.3",
-    "file-loader": "^3.0.1",
-    "mini-css-extract-plugin": "^0.6.0",
+    "file-loader": "^6.2.0",
+    "mini-css-extract-plugin": "^1.3.4",
     "node-sass": "^4.14.1",
     "opn": "^5.1.0",
     "prismjs": "^1.23.0",
@@ -35,15 +37,15 @@
     "stylelint-scss": "^3.5.1",
     "stylelint-webpack-plugin": "^0.10.5",
     "terser-webpack-plugin": "^1.2.1",
-    "vue": "^2.6",
+    "vue": "^3.0.5",
     "vue-form": "^4.4.0",
-    "vue-loader": "^15.0.0",
+    "vue-loader": "^16.1.2",
     "vue-meta": "^1.0.4",
-    "vue-router": "^3.0.1",
+    "vue-router": "4",
     "vue-style-loader": "^4.0.0",
     "vue-template-compiler": "^2.6.9",
     "vue-touch": "^2.0.0-beta.4",
-    "vuex": "^3.0.0",
+    "vuex": "^4.0.0-rc.2",
     "webpack": "^4.0.0",
     "webpack-merge": "^4.0.0"
   },
@@ -66,7 +68,7 @@
     "browser-env": "^3.1.0",
     "chalk": "^2.3.2",
     "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.28.0",
+    "css-loader": "^5.0.1",
     "eslint": "^6.7.2",
     "eslint-friendly-formatter": "^4.0.0",
     "eslint-import-resolver-node": "^0.3.1",
