--- a/package.json
+++ b/package.json
@@ -13,11 +13,7 @@
     "dev:local": "DEMO_MODE=false API_URL=http://localhost:3000/api node build/dev-server.js",
     "prod": "API_URL=https://localhost:3000/api node build/prod-server.js",
     "start": "node build/prod-server.js",
-    "start:logged": "node build/prod-server.js 1> /var/log/node/app.log 2> /var/log/node/err.log",
-    "test": "NODE_ENV=test wprun -c build/webpack.base.conf.js -r ./util/test_helper.js 'src/**/*.test.js' | tap-spec",
-    "test:coverage": "nyc -r text-summary -r html yarn test",
-    "test:debug": "NODE_ENV=test node inspect -c build/webpack.base.conf.js -r ./util/test_helper.js 'src/**/*.test.js' | tap-spec",
-    "test:watch": "NODE_ENV=test wprun -w -c build/webpack.base.conf.js -r ./util/test_helper.js 'src/**/*.test.js' | tap-spec"
+    "start:logged": "node build/prod-server.js 1> /var/log/node/app.log 2> /var/log/node/err.log"
   },
   "dependencies": {
     "@vue/compiler-sfc": "^3.0.5",
@@ -32,10 +28,10 @@
     "opn": "^5.1.0",
     "prismjs": "^1.23.0",
     "sass-loader": "^7.0.0",
-    "stylelint": "^9.10.1",
-    "stylelint-config-recommended-scss": "^3.2.0",
-    "stylelint-scss": "^3.5.1",
-    "stylelint-webpack-plugin": "^0.10.5",
+    "stylelint": "^13.9.0",
+    "stylelint-config-recommended-scss": "^4.2.0",
+    "stylelint-scss": "^3.18.0",
+    "stylelint-webpack-plugin": "^2.1.1",
     "terser-webpack-plugin": "^1.2.1",
     "vue": "^3.0.5",
     "vue-form": "^4.4.0",
@@ -44,8 +40,6 @@
     "vue-router": "4",
     "vue-style-loader": "^4.0.0",
     "vue-template-compiler": "^2.6.9",
-    "vue-touch": "^2.0.0-beta.4",
-    "vuex": "^4.0.0-rc.2",
     "webpack": "^4.0.0",
     "webpack-merge": "^4.0.0"
   },
@@ -53,11 +47,7 @@
     "@vue/cli-plugin-eslint": "~4.4.0",
     "@vue/component-compiler": "^3.6.0",
     "@vue/eslint-config-airbnb": "^5.0.2",
-    "@vue/test-utils": "^1.0.0-beta.28",
-    "animate.css": "^3.5.2",
     "autoprefixer": "^7.1.2",
-    "avoriaz": "^2.4.3",
-    "axios": "^0.16.2",
     "babel-core": "^6.25.0",
     "babel-eslint": "^7.2.3",
     "babel-loader": "^7.1.1",
@@ -78,7 +68,6 @@
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-vue": "^6.2.2",
     "eventsource-polyfill": "^0.9.6",
-    "extract-text-webpack-plugin": "^2.0.0",
     "friendly-errors-webpack-plugin": "^1.1.3",
     "html-webpack-plugin": "^3.0.0",
     "http-proxy-middleware": "^0.17.3",
@@ -92,9 +81,6 @@
     "rimraf": "^2.6.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
-    "sinon": "^2.3.7",
-    "tap-spec": "^4.1.1",
-    "tape": "^4.7.0",
     "url-loader": "^0.5.8",
     "webpack-bundle-analyzer": "^3.0.0",
     "webpack-dev-middleware": "^3.0.0",
