--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "start:logged": "node build/prod-server.js 1> /var/log/node/app.log 2> /var/log/node/err.log"
   },
   "dependencies": {
+    "@vue/cli-service": "^4.5.10",
     "@vue/compiler-sfc": "^3.0.5",
     "@wealthbar/peak-style": "^3.1.1",
     "compression-webpack-plugin": "^2.0.0",
@@ -24,10 +25,11 @@
     "express": "^4.15.3",
     "file-loader": "^6.2.0",
     "mini-css-extract-plugin": "^1.3.4",
-    "node-sass": "^4.14.1",
+    "node-sass": "^5.0.0",
     "opn": "^5.1.0",
     "prismjs": "^1.23.0",
-    "sass-loader": "^7.0.0",
+    "sass-loader": "^10.1.1",
+    "style-loader": "^2.0.0",
     "stylelint": "^13.9.0",
     "stylelint-config-recommended-scss": "^4.2.0",
     "stylelint-scss": "^3.18.0",
@@ -38,7 +40,6 @@
     "vue-loader": "^16.1.2",
     "vue-meta": "^1.0.4",
     "vue-router": "4",
-    "vue-style-loader": "^4.0.0",
     "vue-template-compiler": "^2.6.9",
     "webpack": "^4.0.0",
     "webpack-merge": "^4.0.0"
@@ -47,7 +48,6 @@
     "@vue/cli-plugin-eslint": "~4.4.0",
     "@vue/component-compiler": "^3.6.0",
     "@vue/eslint-config-airbnb": "^5.0.2",
-    "autoprefixer": "^7.1.2",
     "babel-core": "^6.25.0",
     "babel-eslint": "^7.2.3",
     "babel-loader": "^7.1.1",
@@ -76,8 +76,6 @@
     "opn": "^5.1.0",
     "optimize-css-assets-webpack-plugin": "^5.0.0",
     "ora": "^1.2.0",
-    "postcss": "^7.0.14",
-    "postcss-loader": "^3.0.0",
     "rimraf": "^2.6.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
